# PP_Haskell_Final

./: .project  PPHaskellFinal.cabal
.dist-buildwrapper/src/: Main.hs  OperarPostfija.hs  Pila.hs
src/: Main  Main.hi  OperarPostfija.hi  Pila.hi  Postfija.hi  Postfija.hs  entrada.txt  salida.txt
