name:           PPHaskellFinal
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         miguel

executable PPHaskellFinal
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Postfija,
                   OperarPostfija,
                   Pila

